<resources>
    <string name="app_name">SlovenskaTrtaApp</string>
    <string name="seznam_vrst_trt">Seznam vrst trt</string>
    <string name="id">ID</string>
    <string name="vrsta_trte">Vrsta trte</string>
    <string name="vnesi_vrsto_trte">Vnesi vrsto trte</string>
    <string name="textview">TextView</string>
    <string name="nazaj">Nazaj</string>
    <string name="prikazi_trte">prikazi_trte</string>
    <string name="vnesi_trto">vnesi_trto</string>
    <string name="prikazi_vinograde">prikazi_vinograde</string>
    <string name="prikazi_vinograd">prikazi_vinograd</string>
    <string name="vnesi_vinograd">/vnesi_vinograd</string>
    <string name="vnesi_vinograd1">vnesi vinograde</string>
    <string name="povrsina">Površina</string>
    <string name="stevilo_trt">Število trt</string>
    <string name="leto_meritve">Leto meritve</string>
    <string name="id_trte">ID trte</string>
    <string name="prikazi_trte2">prikazi trte</string>
    <string name="prikazi_vinograde2">prikazi vinograde</string>
    <string name="prik_vinograde">prik. vinograde</string>
    <string name="vnesi_trto2">vnesi trto</string>
    <string name="prikazi_pridelek">prikazi pridelek</string>
    <string name="vnesi_pridelek">vnesi pridelek</string>
    <string name="id_trte1">ID trte</string>
    <string name="id_vinograda">ID vinograda</string>
    <string name="koli_ina">Količina</string>
    <string name="koli_ina_na_hektar">Količina na hektar</string>
    <string name="t_kilogramov_na_trto">Št. kilogramov na trto</string>
    <string name="prikazi_odkup">prikazi odkup</string>
    <string name="vnesi_odkup">vnesi odkup</string>
    <string name="id_pridelka">ID pridelka</string>
    <string name="kolicina">Količina</string>
    <string name="cena_na_kilogram">Cena na kilogram</string>
    <string name="vnesi">Vnesi</string>
    <string name="sporo_ilo">Sporočilo</string>
    <string name="sporocilo">Sporočilo</string>
    <string name="sporocilo2">Sporočilo</string>
    <string name="sporocilo3">Sporočilo</string>
</resources>