<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPridelekActivity"
    android:background="@drawable/trtevsloveniji">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/teTrteId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/id_trte1"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <EditText
            android:id="@+id/teVinogradId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/id_vinograda"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <EditText
            android:id="@+id/teKolicina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/koli_ina"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <EditText
            android:id="@+id/teKolNaHa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/koli_ina_na_hektar"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <EditText
            android:id="@+id/teKgNaTrto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/t_kilogramov_na_trto"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <EditText
            android:id="@+id/teLetoMeritve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/leto_meritve"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addPridelek"
            android:text="@string/vnesi_vrsto_trte" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sporocilo3"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:background="#A63663AD" />

        <Button
            android:id="@+id/addMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnBack"
            android:text="@string/nazaj" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>