<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVinogradiActivity"
    android:background="@drawable/trtevsloveniji">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/teTrteId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A63663AD"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/id_trte"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/tePovrsina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#A63663AD"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/povrsina"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/teSteviloTrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#A63663AD"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/stevilo_trt"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/teLetoMeritve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#A63663AD"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/leto_meritve"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addVinograd"
            android:text="@string/vnesi_vrsto_trte" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A63663AD"
            android:text="@string/sporocilo2"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/addMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnBack"
            android:text="@string/nazaj" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>