<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/trte"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="10dp"
        android:text="@string/seznam_vrst_trt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prikaziTrte"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/prikaziTrte"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="16dp"
        android:onClick="prikaziTrte"
        android:text="@string/prikazi_trte"
        app:layout_constraintEnd_toStartOf="@+id/addTrtaActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/addTrtaActivity"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="2dp"
        android:onClick="addTrtaActivity"
        android:text="@string/vnesi_trto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/prikaziVinograde"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:onClick="prikaziVinograde"
        android:text="@string/prikazi_vinograd"
        app:layout_constraintEnd_toStartOf="@+id/addVinogradiActivity2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prikaziTrte"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/addVinogradiActivity2"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="2dp"
        android:onClick="addVinogradiActivity"
        android:text="@string/vnesi_vinograd1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTrtaActivity"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>